1.Login page and yami page styling 2.commented footer for time being 3.currently working on tabs

--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+input {
+  font-family: "Recursive", sans-serif;
+}
+
+button {
+  font-family: "Recursive", sans-serif;
+}
+
+select {
+  font-family: "Recursive", sans-serif;
+}
